--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,4 @@
-<%- include('includes/head'); %>
-
-<section class="container">
-  <h1><%= csrfToken %></h1>
-
-  <form action="/" method="post">
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-    <label>Cliente</label>
-    <input type="text" name="cliente">
-    <button>Submit</button>
-  </form>
-</section>
-
-<%- include('includes/footer'); %>
+<%- include('includes/head') %>
+<%- include('includes/nav') %>
+<h1>ola</h1>
+<%- include('includes/footer') %>
