--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,18 @@
-<%- include('includes/head') %>
-<%- include('includes/nav') %>
-<h1>ola</h1>
-<%- include('includes/footer') %>
+<%- include ('includes/head')%>
+<%- include ('includes/nav')%>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2"></div>
+
+    <div class="col-lg-8 my-5">
+      <h1 class="text-center">Agenda</h1>
+      <p class="text-center lead">
+        Seus contatos estão abaixo
+      </p>
+    </div>
+
+    <div class="col-lg-2"></div>
+  </div>
+</div>
+
+<%- include ('includes/footer')%>
