--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,11 +4,27 @@
   <div class="row">
     <div class="col-lg-2"></div>
 
-    <div class="col-lg-8 my-5">
+    <div class="col-lg-8 my-3">
       <h1 class="text-center">Agenda</h1>
       <p class="text-center lead">
         Seus contatos estão abaixo
       </p>
+
+      <div class="row">
+        <div class="col my-3">
+          <div class="alert alert-danger">Um erro qualquer</div>
+        </div>
+      </div>
+      <div class="responsive-table">
+        <table class="table my-3">
+          <tr>
+            <td>Luiz</td>
+            <td>Otávio</td>
+            <td>561665</td>
+            <td>bruno@gmail.com</td>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <div class="col-lg-2"></div>
