--- a/src/views/includes/messages.ejs
+++ b/src/views/includes/messages.ejs
@@ -1,9 +1,22 @@
-<% if(errors){ %>
+<% if(errors.lenght > 0) { %>
 <div class="row">
     <div class="col my-3">
       <div class="alert alert-danger">
         <% errors.forEach(erro => { %>
             <%= erro %><br>
+            <% }); %>
+      </div>
+    </div>
+  </div>
+
+  <% } %>
+
+<% if(success.lenght > 0) { %>
+<div class="row">
+    <div class="col my-3">
+      <div class="alert alert-success">
+        <% success.forEach(erro => { %>
+            <%= success %><br>
             <% }); %>
       </div>
     </div>
