--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,5 +1,5 @@
-<%- include ('includes/head')%>
-<%- include ('includes/nav')%>
+<%- include('includes/head') %>
+<%- include('includes/nav') %>
 
 <div class="container">
   <div class="row">
@@ -9,49 +9,55 @@
       <h1 class="text-center">Criar conta ou Entrar</h1>
       <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
 
-<%- include('includes/messages'); %>
-
+      <%- include('includes/messages'); %>
       <div class="row">
-        
+
         <div class="col-lg">
-        <h4>Faça seu cadastro</h4>
-        <p>Se não tiver ainda conta, preencha o formulário abaixo:</p>
+          <h4>Faça seu cadastro</h4>
+          <p>Se você ainda não tem conta, preencha o formulário abaixo:</p>
 
-      <form action="/login/register" method="POST">
-        <input type="hidden" name="_csrf" value=<%= csrfToken %>>
-        <div class="mb-3">
-          <label>Seu E-mail</label>
-          <input type="email" class="form-control" name="email">
+          <form action="/login/register" method="POST">
+            <input type="hidden" name="_csrf" value=<%= csrfToken %>>
+            <div class="form-group">
+              <label>Seu e-mail</label>
+              <input type="email" class="form-control" name="email">
+            </div>
+            <div class="form-group">
+              <label>Sua senha</label>
+              <input type="password" class="form-control" name="password">
+            </div>
+            <button type="submit" class="btn btn-primary">Criar minha conta</button>
+          </form>
+
         </div>
-          <label>Sua senha</label>
-          <input type="password" class="form-control" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Criar minha conta</button>
-      </form>
-    </div>
-      
 
+        <div class="col-lg">
+          <h4>Faça seu login</h4>
 
-    <div class="col-lg">
-      <h4>faça seu login</h4>
-      <p>Se você já tem uma conta, faça login abaixo:</p>
+          <p>Se você já tem uma conta, faça login abaixo:</p>
 
-      <form action="/login/login" method="POST">
-        <input type="hidden" name="_csrf" value=<%= csrfToken %>>
-        <div class="mb-3">
-          <label>Seu E-mail</label>
-          <input type="email" class="form-control" name="email">
-        </div>
-          <label>Sua senha</label>
-          <input type="password" class="form-control" name="password">
+          <form action="/login/login" method="POST">
+            <input type="hidden" name="_csrf" value=<%= csrfToken %>>
+            <div class="form-group">
+              <label>Seu e-mail</label>
+              <input type="email" class="form-control" name="email">
+            </div>
+            <div class="form-group">
+              <label>Sua senha</label>
+              <input type="password" class="form-control" name="password">
+            </div>
+            <button type="submit" class="btn btn-primary">Entrar</button>
+          </form>
+
           
-          <button type="submit" class="btn btn-primary">Entrar</button>
-        </form>
-        
+        </div>
+
       </div>
+
     </div>
-    </div>
+
+    <div class="col-lg-2"></div>
   </div>
+</div>
 
-
-<%- include ('includes/footer')%>
+<%- include('includes/footer') %>
