--- a/src/views/includes/messages.ejs
+++ b/src/views/includes/messages.ejs
@@ -11,11 +11,11 @@
 
   <% } %>
 
-<% if(success.lenght > 0) { %>
+<% if(success.length > 0) { %>
 <div class="row">
     <div class="col my-3">
       <div class="alert alert-success">
-        <% success.forEach(erro => { %>
+        <% success.forEach(success => { %>
             <%= success %><br>
             <% }); %>
       </div>
