--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,7 +10,7 @@
         Seus contatos estão abaixo
       </p>
 
-
+<%- include('includes/messages')%>
       <div class="responsive-table">
         <table class="table my-3">
           <tr>
